<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:id="@id/img_item_photo"
            tools:src="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_marginStart="15dp"
            android:layout_centerVertical="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/food_name"
                android:layout_height="0dp"
                android:textStyle="bold"
                android:layout_weight="2"/>

            <TextView
                android:id="@id/tv_item_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                tools:text="@string/food_name_"/>

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:text="@string/food_origin"
                android:layout_weight="2"
                android:layout_height="0dp" />

            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/tv_item_origin"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:layout_weight="4"
                android:layout_height="0dp"
                tools:text="@string/food_origin_"/>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail"/>
        <TextView
            android:layout_marginTop="5dp"
            android:justificationMode="inter_word"
            android:textSize="20sp"
            android:id="@id/tv_item_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/detail_"/>
    </LinearLayout>
</LinearLayout>
